--- a/src/styles/experience.css
+++ b/src/styles/experience.css
@@ -18,5 +18,4 @@
 
 .builder-buttons button {
   padding: 1.5rem;
-  font-size: 1.5rem;
 }
