--- a/src/styles/form_btn.css
+++ b/src/styles/form_btn.css
@@ -1,7 +1,8 @@
 .button-wrapper {
   display: flex;
   gap: 2em;
-  width: 460px;
+  max-width: 460px;
+  width: 100%;
   margin-top: 2em;
 }
 
